fixed people spacing

--- a/styles.css
+++ b/styles.css
@@ -52,13 +52,21 @@ img {
 
 .people img {
     border: 6px solid white;
-    margin-top: 10px;
+}
+
+p.person-label {
+    margin-top: 15px;
+}
+
+.wolfpack img {
+    margin-top: 15px;
 }
 
 nav {
     margin-bottom: 10px;
 }
 
+/* styles for the nav */
 nav a, nav a:visited {
     color: #D52C1F;
     margin-right: 8px;
@@ -82,6 +90,7 @@ nav a:hover::after, nav a.active::after {
     width: 100%;
 }
 
+/* styles for the homepage */
 .home {
     text-align: center;
     margin-top: 50px;
@@ -100,6 +109,7 @@ nav a:hover::after, nav a.active::after {
     z-index: 10;
 }
 
+/* styles for homepage image animation */
 .home img:nth-child(2) {
     position: absolute;
     top: 0;
